# Student-Productivity

./: .firebaserc  .gitattributes  DRAFT_firestore.rules  OneNoteObsidian_0.0.1_amd64.AppImage.sig  OneNoteObsidian_0.0.1_x64_en-US.msi.sig  OneNoteObsidian_0.0.6_amd64.AppImage.sig  OneNoteObsidian_0.0.6_x64-setup.exe.sig  OneNoteObsidian_aarch64.app.tar.gz.sig  README.md  download_and_check.ts  electron-builder.json  electron.cjs  find_installed_pngs.ts  find_logo_pngs_node_modules.ts  firebase-applet-config.json  firebase-blueprint.json  firestore.rules  generate_icons.py  generate_latest_manifest.ts  latest.json  list_project_pngs.ts  metadata.json  new_tauri_keys  new_tauri_keys.pub  package-lock.json  package.json  preload.cjs  security_spec.md  server.ts  tauri-keys  tauri-keys.pub  tauri.pub  test_all_prominent_urls.ts  test_direct_download.ts  test_emoji_unpkg.ts
.github/workflows/: electron-release.yml  firebase-deploy.yml  tauri-release.yml
scripts/: generate-and-verify-icons.ts  test-png-integrity.ts
src/: App.tsx  AuthProvider.tsx  firebase.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: CalendarComponent.tsx  Dashboard.tsx  ElectronTitleBar.tsx  GraphView.tsx  NoteEditor.tsx  SettingsPage.tsx  SettingsView.tsx  Sidebar.tsx  TauriTitleBar.tsx
src/data/: initialData.ts
