[package]
name = "onenote-obsidian-app"
version = "0.0.0"
description = "A beautiful study workspace blending OneNote sections with Obsidian bi-directional nodes"
authors = ["Student Developer"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
tauri = { version = "1.5", features = [ "shell-all", "updater" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
