[package]
name = "onenote-obsidian-app"
version = "0.0.0"
description = "A beautiful study workspace blending OneNote sections with Obsidian bi-directional nodes"
authors = ["Student Developer"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [ "tray-icon" ] }
tauri-plugin-updater = "2.0.0"
tauri-plugin-process = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
